[gd_scene load_steps=7 format=2]

[ext_resource path="res://globals/exit.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 1, 0.215686, 0.215686, 1 )

[sub_resource type="StyleBoxEmpty" id=4]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Close" type="Button"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "X"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 300.0
margin_bottom = 105.0
rect_min_size = Vector2( 300, 105 )
window_title = "Exit?"
dialog_text = "Are you sure you want to quit?"
[connection signal="pressed" from="." to="." method="_on_Close_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="custom_action" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_custom_action"]
